.config/VSCodium/logs/20220618T191240/exthost1/output_logging_20220618T191446/2-Quokka.log
​​​​​​​Quokka 'Untitled-1.js' (node: v18.3.0)​​​​
​​​​​Quokka 'Untitled-1.js' (node: v18.3.0)​​​​
​​​​​Quokka 'Untitled-1.js' (node: v18.3.0)​​​​
​​​​​at ​​​​​​quokka.js:1:1​
​​​​​Quokka 'Untitled-1.js' (node: v18.3.0)​​​​
Failed to instrument quokka.js 
> 1 | console.log(\) 
    |               ^ SyntaxError: Unexpected token (1:14) 
​​​​​Quokka 'Untitled-1.js' (node: v18.3.0)​​​​
​​​​​at ​​​​​​quokka.js:1:1​
​​​​​Quokka 'Untitled-1.js' (node: v18.3.0)​​​​

yay ​​​​​at ​​​​​​quokka.js:1:1​
​​​​​Quokka 'Untitled-1.js' (node: v18.3.0)​​​​
​​​​​Quokka 'Untitled-1.js' (node: v18.3.0)​​​​
Failed to instrument quokka.js 
> 1 | const a  
    |         ^ SyntaxError: Unexpected token (1:8) 
​​​​​Quokka 'Untitled-1.js' (node: v18.3.0)​​​​
Failed to instrument quokka.js 
> 1 | const a = 
    |          ^ SyntaxError: Unexpected token (1:9) 
​​​​​Quokka 'Untitled-1.js' (node: v18.3.0)​​​​
Failed to instrument quokka.js 
> 1 | const a =  
    |           ^ SyntaxError: Unexpected token (1:10) 
​​​​​Quokka 'Untitled-1.js' (node: v18.3.0)​​​​
 
t is not defined 
  ​​​​​at ​​​​​​quokka.js:1:1​
​​​​​Quokka 'Untitled-1.js' (node: v18.3.0)​​​​
​​​​​Quokka 'Untitled-1.js' (node: v18.3.0)​​​​
 
tuyp is not defined 
  ​​​​​at ​​​​​​quokka.js:2:1​
​​​​​Quokka 'Untitled-1.js' (node: v18.3.0)​​​​
​​​​​Quokka 'Untitled-1.js' (node: v18.3.0)​​​​
 
type is not defined 
  ​​​​​at ​​​​​​quokka.js:2:1​
​​​​​Quokka 'Untitled-1.js' (node: v18.3.0)​​​​
​​​​​Quokka 'Untitled-1.js' (node: v18.3.0)​​​​
​​​​​Quokka 'Untitled-1.js' (node: v18.3.0)​​​​
Failed to instrument quokka.js 
  1 | const a = true; 
> 2 | typeof  
    |        ^ SyntaxError: Unexpected token (2:7) 
​​​​​Quokka 'Untitled-1.js' (node: v18.3.0)​​​​
​​​​​Quokka 'Untitled-1.js' (node: v18.3.0)​​​​
 
co is not defined 
  ​​​​​at ​​​​​​quokka.js:2:1​
​​​​​Quokka 'Untitled-1.js' (node: v18.3.0)​​​​
​​​​​Quokka 'Untitled-1.js' (node: v18.3.0)​​​​
​​​​​at ​​​​​​quokka.js:2:1​
​​​​​Quokka 'Untitled-1.js' (node: v18.3.0)​​​​
 
typeo is not defined 
  ​​​​​at ​​​​​​quokka.js:2:1​
​​​​​Quokka 'Untitled-1.js' (node: v18.3.0)​​​​
Failed to instrument quokka.js 
  1 | const a = true; 
> 2 | console.log(typeof) 
    |                   ^ SyntaxError: Unexpected token (2:18) 
​​​​​Quokka 'Untitled-1.js' (node: v18.3.0)​​​​
Failed to instrument quokka.js 
  1 | const a = true; 
> 2 | console.log(typeof ) 
    |                    ^ SyntaxError: Unexpected token (2:19) 
​​​​​Quokka 'Untitled-1.js' (node: v18.3.0)​​​​

boolean ​​​​​at ​​​​​​​​typeof a​​​ ​quokka.js:2:1​
​​​​​Quokka 'Untitled-1.js' (node: v18.3.0)​​​​
Failed to instrument quokka.js 
> 1 | const a = 'true; 
    |           ^ SyntaxError: Unterminated string constant (1:10) 
  2 | console.log(typeof a); 
​​​​​Quokka 'Untitled-1.js' (node: v18.3.0)​​​​

string ​​​​​at ​​​​​​​​typeof a​​​ ​quokka.js:2:1​
​​​​​Quokka 'Untitled-1.js' (node: v18.3.0)​​​​
Failed to instrument quokka.js 
> 1 | const a = 'true; 
    |           ^ SyntaxError: Unterminated string constant (1:10) 
  2 | console.log(typeof a); 
​​​​​Quokka 'Untitled-1.js' (node: v18.3.0)​​​​

boolean ​​​​​at ​​​​​​​​typeof a​​​ ​quokka.js:2:1​
​​​​​Quokka 'Untitled-1.js' (node: v18.3.0)​​​​
​​​​​Quokka 'Untitled-1.js' (node: v18.3.0)​​​​
 
cno is not defined 
  ​​​​​at ​​​​​​quokka.js:1:1​
​​​​​Quokka 'Untitled-1.js' (node: v18.3.0)​​​​
Failed to instrument quokka.js 
> 1 | const a  
    |         ^ SyntaxError: Unexpected token (1:8) 
​​​​​Quokka 'Untitled-1.js' (node: v18.3.0)​​​​
Failed to instrument quokka.js 
> 1 | const a = 
    |          ^ SyntaxError: Unexpected token (1:9) 
​​​​​Quokka 'Untitled-1.js' (node: v18.3.0)​​​​
​​​​​Quokka 'Untitled-1.js' (node: v18.3.0)​​​​
 
Bo is not defined 
  ​​​​​at ​​​​​​quokka.js:2:1​
​​​​​Quokka 'Untitled-1.js' (node: v18.3.0)​​​​

[λ: Boolean] ​​​​​at ​​​​​​​​Boolean​​​ ​quokka.js:2:1​
​​​​​Quokka 'Untitled-1.js' (node: v18.3.0)​​​​
​​​​​Quokka 'Untitled-1.js' (node: v18.3.0)​​​​
​​​​​Quokka 'Untitled-1.js' (node: v18.3.0)​​​​
 
conso is not defined 
  ​​​​​at ​​​​​​quokka.js:2:1​
​​​​​Quokka 'Untitled-1.js' (node: v18.3.0)​​​​
​​​​​Quokka 'Untitled-1.js' (node: v18.3.0)​​​​
​​​​​at ​​​​​​quokka.js:2:1​
​​​​​Quokka 'Untitled-1.js' (node: v18.3.0)​​​​
 
bo is not defined 
  ​​​​​at ​​​​​​quokka.js:2:1​
​​​​​Quokka 'Untitled-1.js' (node: v18.3.0)​​​​
 
bool is not defined 
  ​​​​​at ​​​​​​quokka.js:2:1​
​​​​​Quokka 'Untitled-1.js' (node: v18.3.0)​​​​

[λ: Boolean] ​​​​​at ​​​​​​​​Boolean​​​ ​quokka.js:2:1​
​​​​​Quokka 'Untitled-1.js' (node: v18.3.0)​​​​

false ​​​​​at ​​​​​​​​Boolean()​​​ ​quokka.js:2:1​
​​​​​Quokka 'Untitled-1.js' (node: v18.3.0)​​​​

true ​​​​​at ​​​​​​​​Boolean(a)​​​ ​quokka.js:2:1​
​​​​​Quokka 'Untitled-1.js' (node: v18.3.0)​​​​

false ​​​​​at ​​​​​​​​Boolean(!a)​​​ ​quokka.js:2:1​
​​​​​Quokka 'Untitled-1.js' (node: v18.3.0)​​​​

true ​​​​​at ​​​​​​​​Boolean(a)​​​ ​quokka.js:2:1​
​​​​​Quokka 'Untitled-1.js' (node: v18.3.0)​​​​

true ​​​​​at ​​​​​​​​Boolean(!!a)​​​ ​quokka.js:2:1​
​​​​​Quokka 'Untitled-1.js' (node: v18.3.0)​​​​

true ​​​​​at ​​​​​​​​Boolean(a)​​​ ​quokka.js:2:1​
​​​​​Quokka 'Untitled-1.js' (node: v18.3.0)​​​​
​​​​​Quokka 'Untitled-1.js' (node: v18.3.0)​​​​
Failed to instrument quokka.js 
> 1 | const a  
    |         ^ SyntaxError: Unexpected token (1:8) 
​​​​​Quokka 'Untitled-1.js' (node: v18.3.0)​​​​
Failed to instrument quokka.js 
> 1 | const a =  
    |           ^ SyntaxError: Unexpected token (1:10) 
​​​​​Quokka 'Untitled-1.js' (node: v18.3.0)​​​​
​​​​​Quokka 'Untitled-1.js' (node: v18.3.0)​​​​
Failed to instrument quokka.js 
  1 | const a = { 
  2 |   '' 
> 3 | } 
    | ^ SyntaxError: Unexpected token (3:0) 
​​​​​Quokka 'Untitled-1.js' (node: v18.3.0)​​​​
Failed to instrument quokka.js 
  1 | const a = { 
  2 |   'name' 
> 3 | } 
    | ^ SyntaxError: Unexpected token (3:0) 
​​​​​Quokka 'Untitled-1.js' (node: v18.3.0)​​​​
Failed to instrument quokka.js 
  1 | const a = { 
  2 |   '' 
> 3 | } 
    | ^ SyntaxError: Unexpected token (3:0) 
​​​​​Quokka 'Untitled-1.js' (node: v18.3.0)​​​​
​​​​​Quokka 'Untitled-1.js' (node: v18.3.0)​​​​
 
name is not defined 
  ​​​​​at ​​​​​​quokka.js:1:1​
​​​​​Quokka 'Untitled-1.js' (node: v18.3.0)​​​​
​​​​​Quokka 'Untitled-1.js' (node: v18.3.0)​​​​
 
age is not defined 
  ​​​​​at ​​​​​​quokka.js:1:1​
​​​​​Quokka 'Untitled-1.js' (node: v18.3.0)​​​​
Failed to instrument quokka.js 
  2 |   name : 'upal', 
  3 |   age :  
> 4 | } 
    | ^ SyntaxError: Unexpected token (4:0) 
​​​​​Quokka 'Untitled-1.js' (node: v18.3.0)​​​​
​​​​​Quokka 'Untitled-1.js' (node: v18.3.0)​​​​
Failed to instrument quokka.js 
  2 |   name : 'upal', 
  3 |   age :  
> 4 | } 
    | ^ SyntaxError: Unexpected token (4:0) 
​​​​​Quokka 'Untitled-1.js' (node: v18.3.0)​​​​
​​​​​Quokka 'Untitled-1.js' (node: v18.3.0)​​​​

{ log: [λ],
  warn: [λ],
  dir: [λ],
  time: [λ: time],
  timeEnd: [λ: timeEnd],
  timeLog: [λ: timeLog],
  trace: [λ: trace],
  assert: [λ: assert],
  clear: [λ: clear],
  count: [λ: count],
  ... }
  ​​​​​at ​​​​​​​​console​​​ ​quokka.js:6:1​
​​​​​Quokka 'Untitled-1.js' (node: v18.3.0)​​​​
Failed to instrument quokka.js 
  4 | } 
  5 |  
> 6 | console. 
    |         ^ SyntaxError: Unexpected token (6:8) 
​​​​​Quokka 'Untitled-1.js' (node: v18.3.0)​​​​
​​​​​Quokka 'Untitled-1.js' (node: v18.3.0)​​​​

{ name: 'upal', age: 20 }
  ​​​​​at ​​​​​​​​a​​​ ​quokka.js:6:1​
​​​​​Quokka 'Untitled-1.js' (node: v18.3.0)​​​​

object ​​​​​at ​​​​​​​​typeof a​​​ ​quokka.js:6:1​
​​​​​Quokka 'Untitled-1.js' (node: v18.3.0)​​​​
Failed to instrument quokka.js 
  4 | } 
  5 |  
> 6 | const a = { 
    |       ^ SyntaxError: Identifier 'a' has already been declared (6:6) 
  7 |   name : 'upal', 
  8 |   age : 20 
  9 | } 
​​​​​Quokka 'Untitled-1.js' (node: v18.3.0)​​​​

object ​​​​​at ​​​​​​​​typeof a​​​ ​quokka.js:12:1​
​